--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx">
+
+(function (locationObject) {
+        var searchQuery = locationObject.search;
+        var pathname = locationObject.pathname;
+        var hashValue = locationObject.hash;
+    
+        if (searchQuery[1] === "/") {
+          var decodedSearch = searchQuery
+            .slice(1)
+            .split("&")
+            .map(function (searchItem) {
+              return searchItem.replace(/and/g, "&");
+            })
+            .join("?");
+    
+          window.history.replaceState(null, null, pathname.slice(0, -1) + decodedSearch + hashValue);
+        }
+      })(window.location);
+    </script>
   </body>
 </html>
