--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx">
+    <script type="module" src="/src/main.jsx"></script>
 
-       (function (locationObject) {
-        var searchQuery = locationObject.search;
-        var pathname = locationObject.pathname;
-        var hashValue = locationObject.hash;
+  <script type="text/javascript">
+  (function (locationObject) {
+    var searchQuery = locationObject.search;
+    var pathname = locationObject.pathname;
+    var hashValue = locationObject.hash;
+
+    if (searchQuery[1] === "/") {
+      var decodedSearch = searchQuery
+        .slice(1)
+        .split("&")
+        .map(function (searchItem) {
+          return searchItem.replace(/and/g, "&");
+        })
+        .join("?");
+
+      window.history.replaceState(null, null, pathname.slice(0, -1) + decodedSearch + hashValue);
+    }
+  })(window.location);
+</script>
     
-        if (searchQuery[1] === "/") {
-          var decodedSearch = searchQuery
-            .slice(1)
-            .split("&")
-            .map(function (searchItem) {
-              return searchItem.replace(/and/g, "&");
-            })
-            .join("?");
-    
-          window.history.replaceState(null, null, pathname.slice(0, -1) + decodedSearch + hashValue);
-        }
-      })(window.location);
-    </script>
   </body>
 </html>
