--- a/index.html
+++ b/index.html
@@ -11,23 +11,17 @@
     <script type="module" src="/src/main.jsx"></script>
 
   <script type="text/javascript">
-  (function (locationObject) {
-    var searchQuery = locationObject.search;
-    var pathname = locationObject.pathname;
-    var hashValue = locationObject.hash;
+   if (!window.location.origin) {
+        window.location.origin = window.location.protocol + "//" + window.location.host;
+      }
 
-    if (searchQuery[1] === "/") {
-      var decodedSearch = searchQuery
-        .slice(1)
-        .split("&")
-        .map(function (searchItem) {
-          return searchItem.replace(/and/g, "&");
-        })
-        .join("?");
+      window.addEventListener('popstate', function(event) {
+        if (!event.state) {
+          window.history.replaceState({}, '', window.location.origin + window.location.pathname + window.location.search);
+        }
+      });
 
-      window.history.replaceState(null, null, pathname.slice(0, -1) + decodedSearch + hashValue);
-    }
-  })(window.location);
+      window.history.replaceState({}, '', window.location.origin + window.location.pathname + window.location.search);
 </script>
     
   </body>
