--- a/index.html
+++ b/index.html
@@ -2,13 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/only.png"  />
+    <link rel="icon" type="image/svg+xml" href="/public/only.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mubuga Bio Coffee</title>
+    
+    <!-- Title Tag -->
+    <title>Mubuga Bio-Coffee - Uplifting Lives with Organic Coffee</title>
+
+    <!-- Meta Description -->
+    <meta name="description" content="Mubuga Bio-Coffee is a company investing in organic Bio-Coffee to improve the livelihood of the local population and uplift the Mubuga sector, recovering from the 1994 genocide against the Tutsi. Contributing to reducing the Rwandan trade deficit and satisfying global demand for Bio-Coffee." />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.youtube.com/@mubugabiocoffee2098" />
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="Mubuga Bio-Coffee - Uplifting Lives with Organic Coffee" />
+    <meta property="og:description" content="Mubuga Bio-Coffee invests in organic Bio-Coffee to improve local livelihoods and uplift the Mubuga sector, post-genocide. Reducing the Rwandan trade deficit and meeting global Bio-Coffee demand." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.mubugabiocoffee.rw" />
+    <meta property="og:image" content="https://www.mubugabiocoffee.rw/assets/finalLogo-DHFuXONb.png" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Mubuga Bio-Coffee - Uplifting Lives with Organic Coffee" />
+    <meta name="twitter:description" content="Mubuga Bio-Coffee invests in organic Bio-Coffee to improve local livelihoods and uplift the Mubuga sector, post-genocide. Reducing the Rwandan trade deficit and meeting global Bio-Coffee demand." />
+    <meta name="twitter:image" content="https://twitter.com/mubugabiocoffee" />
+
+    <!-- Robots Meta Tag -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- Keywords Meta Tag -->
+    <meta name="keywords" content="Mubuga Bio-Coffee, organic coffee, bio-coffee, Rwandan coffee, fair trade coffee, local livelihoods, trade deficit reduction, sustainable agriculture" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    
   </body>
 </html>
