--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/finalLogo-DHFuXONb.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/finalLogo-DHFuXONb.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <!-- Title Tag -->
     <title>Mubuga bio coffee - Uplifting Lives with Organic Coffee</title>
 
     <!-- Meta Description -->
-    <meta name="description" content="Mubuga bio coffee is a company investing in organic bio coffee to improve the livelihood of the local population and uplift the Mubuga sector, recovering from the 1994 genocide against the Tutsi. Contributing to reducing the Rwandan trade deficit and satisfying global demand for bio coffee." />
+    <meta
+      name="description"
+      content="Mubuga bio coffee is a company investing in organic bio coffee to improve the livelihood of the local population and uplift the Mubuga sector, recovering from the 1994 genocide against the Tutsi. Contributing to reducing the Rwandan trade deficit and satisfying global demand for bio coffee."
+    />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.youtube.com/@mubugabiocoffee2098" />
 
     <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="Mubuga bio coffee - Uplifting Lives with Organic Coffee" />
-    <meta property="og:description" content="Mubuga bio coffee invests in organic bio coffee to improve local livelihoods and uplift the Mubuga sector, post-genocide. Reducing the Rwandan trade deficit and meeting global bio coffee demand." />
+    <meta
+      property="og:description"
+      content="Mubuga bio coffee invests in organic bio coffee to improve local livelihoods and uplift the Mubuga sector, post-genocide. Reducing the Rwandan trade deficit and meeting global bio coffee demand."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.mubugabiocoffee.rw" />
-    <meta property="og:image" content="https://www.mubugabiocoffee.rw/assets/finalLogo-DHFuXONb.png" />
+    <meta property="og:image" content="https://www.mubugabiocoffee.rw/assets/finalLogo-DHFuXONb.webp" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Mubuga bio coffee - Uplifting Lives with Organic Coffee" />
-    <meta name="twitter:description" content="Mubuga bio coffee invests in organic bio coffee to improve local livelihoods and uplift the Mubuga sector, post-genocide. Reducing the Rwandan trade deficit and meeting global bio coffee demand." />
+    <meta
+      name="twitter:description"
+      content="Mubuga bio coffee invests in organic bio coffee to improve local livelihoods and uplift the Mubuga sector, post-genocide. Reducing the Rwandan trade deficit and meeting global bio coffee demand."
+    />
     <meta name="twitter:image" content="https://twitter.com/mubugabiocoffee" />
 
     <!-- Robots Meta Tag -->
