--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/finalLogo-DHFuXONb.webp" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/finalLogo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title Tag -->
