--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/finalLogo-DHFuXONb.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/only.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title Tag -->
