--- a/index.html
+++ b/index.html
@@ -2,45 +2,64 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/only.webp" />
+    <link rel="icon" type="image/webp" href="./src/assets/only.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title Tag -->
-    <title>Mubuga bio coffee - Uplifting Lives with Organic Coffee</title>
+    <title>Mubuga Bio Coffee - The Best Organic Coffee in Rwanda</title>
 
     <!-- Meta Description -->
     <meta
       name="description"
-      content="Mubuga bio coffee is a company investing in organic bio coffee to improve the livelihood of the local population and uplift the Mubuga sector, recovering from the 1994 genocide against the Tutsi. Contributing to reducing the Rwandan trade deficit and satisfying global demand for bio coffee."
+      content="Discover Mubuga Bio Coffee, the finest organic coffee in Rwanda. We uplift local communities and contribute to reducing the trade deficit with our premium bio coffee, grown sustainably in the Mubuga sector."
     />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.youtube.com/@mubugabiocoffee2098" />
+    <link rel="canonical" href="https://www.mubugabiocoffee.rw" />
 
     <!-- Open Graph Meta Tags for Social Media -->
-    <meta property="og:title" content="Mubuga bio coffee - Uplifting Lives with Organic Coffee" />
+    <meta property="og:title" content="Mubuga Bio Coffee - The Best Organic Coffee in Rwanda" />
     <meta
       property="og:description"
-      content="Mubuga bio coffee invests in organic bio coffee to improve local livelihoods and uplift the Mubuga sector, post-genocide. Reducing the Rwandan trade deficit and meeting global bio coffee demand."
+      content="Discover Mubuga Bio Coffee, the finest organic coffee in Rwanda. We uplift local communities and contribute to reducing the trade deficit with our premium bio coffee, grown sustainably in the Mubuga sector."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.mubugabiocoffee.rw" />
-    <meta property="og:image" content="https://www.mubugabiocoffee.rw/assets/finalLogo-DHFuXONb.webp" />
+    <meta property="og:image" content="https://www.mubugabiocoffee.rw/assets/finalLogo-SC8Xu55a.webp" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Mubuga bio coffee - Uplifting Lives with Organic Coffee" />
+    <meta name="twitter:title" content="Mubuga Bio Coffee - The Best Organic Coffee in Rwanda" />
     <meta
       name="twitter:description"
-      content="Mubuga bio coffee invests in organic bio coffee to improve local livelihoods and uplift the Mubuga sector, post-genocide. Reducing the Rwandan trade deficit and meeting global bio coffee demand."
+      content="Discover Mubuga Bio Coffee, the finest organic coffee in Rwanda. We uplift local communities and contribute to reducing the trade deficit with our premium bio coffee, grown sustainably in the Mubuga sector."
     />
-    <meta name="twitter:image" content="https://twitter.com/mubugabiocoffee" />
+    <meta name="twitter:image" content="https://www.mubugabiocoffee.rw/assets/finalLogo-SC8Xu55a.webp" />
 
     <!-- Robots Meta Tag -->
     <meta name="robots" content="index, follow" />
 
     <!-- Keywords Meta Tag -->
-    <meta name="keywords" content="Mubuga bio coffee, organic coffee, bio coffee, Rwandan coffee, fair trade coffee, local livelihoods, trade deficit reduction, sustainable agriculture" />
+    <meta name="keywords" content="Mubuga Bio Coffee, organic coffee Rwanda, Rwandan coffee, fair trade coffee, sustainable agriculture, best coffee in Rwanda, bio coffee, local coffee farmers" />
+
+    <!-- Structured Data for Rich Snippets -->
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "Mubuga Bio Coffee",
+        "url": "https://www.mubugabiocoffee.rw",
+        "logo": "https://www.mubugabiocoffee.rw/assets/finalLogo-SC8Xu55a.webp",
+        "sameAs": ["https://www.facebook.com/mubugabiocoffee", "https://twitter.com/mubugabiocoffee", "https://www.instagram.com/mubugabiocoffee", "https://www.youtube.com/@mubugabiocoffee2098"],
+        "description": "Discover Mubuga Bio Coffee, the finest organic coffee in Rwanda. We uplift local communities and contribute to reducing the trade deficit with our premium bio coffee, grown sustainably in the Mubuga sector."
+      }
+    </script>
+
+    <!-- Additional SEO Improvements -->
+    <meta name="author" content="Mubuga Bio Coffee" />
+    <meta name="language" content="English" />
+    <meta name="rating" content="General" />
+    <meta name="distribution" content="Global" />
   </head>
   <body>
     <div id="root"></div>
